--- a/index.html
+++ b/index.html
@@ -23,6 +23,42 @@
       </thead>
       <tbody>
         <tr>
+          <td>2024</td>
+          <td><a href="https://www.kinopoisk.ru/series/5508554/">Папа миа</a></td>
+          <td>Максим Пежемский</td>
+          <td>Леван Капанадзе</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><a href="#">Северная станция</a></td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><a href="https://www.imdb.com/title/tt30768429/">Make Laugh</a></td>
+          <td>Александр Молочников</td>
+          <td>Niki Waltl</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><a href="https://www.kinopoisk.ru/series/5388902/">На автомате</a></td>
+          <td>Борис Акопов</td>
+          <td>Андрей Лунинский</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><a href="https://www.kinopoisk.ru/series/5305583/">Трасса</a></td>
+          <td>Душан Глигоров</td>
+          <td>Батыр Моргачев</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="table-group-divider border-light-subtle">
           <td>2023</td>
           <td><a href="https://www.kinopoisk.ru/series/1412526/">Фандорин. Азазель</a></td>
           <td>Нурбек Эген</td>
